--- a/portfolio.html
+++ b/portfolio.html
@@ -263,24 +263,24 @@
             </div>
             <div class="footer-second"></div>
             <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Contact</li>
-                <li>Services</li>
+                <li>Inter IIT Sports meet 2022</li>
+                <li>Astronomy Club</li>
+                <li>Dramatics Club</li>
+                <li>Photography and Movie Club</li>
             </ul>
             <div class="footer-third"></div>
             <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Contact</li>
-                <li>Services</li>
+                <li>Xpecto</li>
+                <li>AstraX</li>
+                <li>Ranneeti</li>
+                <li>Ruvaan</li>
             </ul>
             <div class="footer-fourth"></div>
             <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Contact</li>
-                <li>Services</li>
+                <li>Content Writer</li>
+                <li>Event Coordinator</li>
+                <li>Content Writer</li>
+                <li>Publicity</li>
             </ul>
         </div>
         <div class="footer-rights">
